# camsim

./: .gitignore  CMakeFlags.cmake  CMakeLib.cmake  CMakeLists.txt  CMakeRes.cmake  FindOpenSceneGraphi.cmake  JustSim.kdev4  MultipleRun.sh  Nasir.kdev4  README.md  Shrink.sh  formatter.bat  formatter.sh  main.cpp
.kdev4/: JustSim.kdev4  Nasir.kdev4
Core/: nsrCore.h  nsrDataDef.cpp  nsrDataDef.h  nsrFilters.cpp  nsrFilters.h  nsrImageBuffer2.cpp  nsrImageBuffer2.h  nsrIndex.cpp  nsrIndex.h  nsrMsgLog.h  nsrNumBuffer.c  nsrNumBuffer.h  nsrSettings.cpp  nsrSettings.h  nsrStrUtility.c  nsrStrUtility.h  nsrUtility.cpp  nsrUtility.h
Core/GeoLib/: Local2Local.cpp  Local2Spherical.cpp  Spherical2Local.cpp  nsrGeoLib2.h
Core/Matlib/: main.cpp  nsrMathLib.cpp  nsrMathLib.h  nsrMathLibInv.cpp  nsrQRDecomp.cpp  nsrQRDecomp.h  nsrQuat.h  nsrTriad.h  releaseNotes.txt
Core/RotLib/: calcEuError.cpp  crossMat.cpp  eulerToRotMat.cpp  nsrRotLib.h  quatToRotMat.cpp
ImageProc/: nsrImageProc.cpp  nsrImageProc.h
Sim/: Init_Sim.cpp  Init_Sim.h  Sensors.cpp  Sim.cpp  Sim.h  nsrPoseSim.cpp  nsrPoseSim.h  nsrRosInterface.cpp  nsrRosInterface.h  nsrSimParamReader.cpp  nsrSimParamReader.h
View/: EarthFlatnessTest.m  nsrGeoLib.cpp  nsrGeoLib.h  nsrImageDrawable.cpp  nsrImageDrawable.h  nsrImageDrawableParams.cpp  nsrImageDrawableParams.h  nsrMapDrawable2.cpp  nsrMapDrawable2.h  nsrOSG.cpp  nsrOSGShaders.cpp  nsrOSGShaders.h  nsrOSGUtility.cpp  nsrOSGUtility.h  nsrObjectDrawable.cpp  nsrObjectDrawable.h  nsrOsgCamSimScene.cpp  nsrOsgCamSimScene.h  nsrOsgCommonView.cpp  nsrOsgCommonView.h  nsrOsgView.cpp  nsrOsgView.h  nsrOsgView2.h  sharing_textures.cpp  sharing_textures.h
Visualize/: LinuxIO.h  nsrLinuxKeyBoard2.cpp  nsrLinuxKeyBoard2.h  nsrMatShow.cpp  nsrMatShow.h  nsrPlot.cpp  nsrPlot.h  nsrVisualize.cpp  nsrVisualize.h  plot3d.cpp  plot3d.h
assets/CamSim/: Fsr2015CustomCam.xml  Fsr2015Gray5ParamCam.xml  Parameters-FSR2015-lawnMower-1stArticleCam.xml  Parameters-FSR2015-lawnMower-customCam.xml  Parameters-FSR2015-lawnMower-customCamStab.xml  Parameters-FSR2015-lawnMower-grayCam.xml  Parameters-opencvCalibSequence.xml  Parameters-test.xml  Parameters.xml  S3FishEye5ParamCam-AgisoftLens.xml  S3FishEye5ParamCam-OpenCV.xml  S3NoLensCam.xml  addresses.txt  idealCam-90yaw.xml  idealCam.xml  path-chessboard-S3fisheye-lowoffset-agisoftlens+posetracker.csv  path-chessboard-S3fisheye-lowoffset-opencv+posetracker.csv  path-pure-pattern-rotation.csv  path-pure-pattern-translation.csv  path-test.csv  path_lawnmower-vertigo.csv  path_lawnmower.csv  path_lawnmower_nadir.csv  path_lawnmower_no_rotation.csv  path_lawnmower_no_translation.csv  path_sin.csv  positions-camsim-v1.xml  (+4 more)
(+43 files in other folders)
